* 알람 추가할 때 미션 설정할 수 있도록 구현.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,13 @@
         android:timePickerMode="spinner"
         android:layout_marginBottom="24dp" />
 
+    <!-- 미션 선택 스피너 추가 -->
+    <Spinner
+        android:id="@+id/missionSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp" />
+
     <!-- 버튼 -->
     <Button
         android:id="@+id/setAlarmBtn"
