--- a/app/src/main/res/layout/item_alarm.xml
+++ b/app/src/main/res/layout/item_alarm.xml
@@ -15,6 +15,16 @@
         android:layout_weight="1"
         android:gravity="start"/>
 
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/missionTypeTextView"
+        android:layout_marginStart="0dp"
+        android:textColor="#666"
+        android:textSize="20sp"
+        android:layout_weight="1"
+         />
+
     <Button
         android:id="@+id/cancelBtn"
         android:layout_width="wrap_content"
