--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="checkbox_selected_bg">#2196F3</color>
+    <color name="checkbox_default_bg">#FFFFFF</color>
 </resources>
